# Simulating-Gravitational-Interactions-Using-N-Body-Particle-Mesh-Methods

./: README.md  Responses.md
Correlations/: correlation_functions.csv  graph.py
Images/F1.0/: density_10.ppm  density_100.pbm  density_100.ppm  density_110.pbm  density_110.ppm  density_120.ppm  density_130.pbm  density_130.ppm  density_140.ppm  density_20.pbm  density_20.ppm  density_30.ppm  density_40.ppm  density_50.ppm  density_60.pbm  density_60.ppm  density_70.ppm  density_80.ppm  density_90.ppm
Images/F1.02/: density_0.ppm  density_10.ppm  density_100.pbm  density_100.ppm  density_110.pbm  density_110.ppm  density_120.ppm  density_130.ppm  density_140.pbm  density_140.ppm  density_20.pbm  density_20.ppm  density_30.pbm  density_30.ppm  density_40.ppm  density_50.ppm  density_60.pbm  density_60.ppm  density_70.pbm  density_70.ppm  density_80.ppm  density_90.pbm  density_90.ppm
app/: CMakeLists.txt  NBody_Comparison.cpp  NBody_Visualiser.cpp
benchmark/: CMakeLists.txt  benchmarks.cpp
include/: Simulation.hpp  Utils.hpp
lib/: Simulation.cpp  Utils.cpp
output/: correlation_functions.csv
test/: test_simulation.cpp
